# pipelex-hackathon

./: .env  .gitignore  DEMO.md  DEMO_CHECKLIST.md  ENHANCEMENTS_V3.md  FINAL_DELIVERY.md  FINAL_SUMMARY.md  HACKATHON_FINAL.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MULTIPAGE_APP_README.md  QUICK_START.md  README.md  TEST_REPORT.md  app.py  app_v2.py  app_v3.py  main.py  pyproject.toml  test_app.py  test_image_generation.py  test_replicate.py
examples/: run_post_analysis.py  run_social_content.py
pages/: 1_📝_Content_Generation.py  2_📊_Post_Analysis.py
results/observer/: after_failing_run.jsonl  after_successful_run.jsonl  before_run.jsonl
social_content/: __init__.py  replicate_functions.py  social_content.plx  social_content_struct.py
social_media_analysis/: __init__.py  analytics_struct.py  campaign_analytics.plx
